# seaorm-example

./: Cargo.toml  readme.md
migration/src/: lib.rs  m20230524_103033_chef_table.rs
src/: main.rs
