[package]
name = "bakery-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
sea-orm = { version = "0.11.3", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
